--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -44,6 +44,7 @@ body {
 }
 
 .form {
+    position: absolute;
     height: 100vh;
     width: 40vw;
     display: flex;
@@ -67,16 +68,33 @@ body {
     line-height: 3rem;
 }
 
+.input-feild {
+    background-color: #272727;
+    border: solid var(--accent) 1px;
+    margin: 2rem auto;
+    border-radius: 2rem;
+    padding: 0 1rem;
+}
+
+.input-feild label {
+    position: absolute;
+    left: 2.3rem;
+    margin-top: -0.8rem;
+    background: var(--bg);
+    padding: 0 0.5rem;
+}
+
+.input-feild i{
+    padding: 1.2rem 0;
+}
+
 input {
-    display: block;
-    width: 100%;
-    font-size: 1.1rem;
-    margin: 1rem 0;
-    padding: 1rem 1rem;
-    background-color: transparent;
+    display: inline-block;
+    width: 90%;
     border: none;
-    border: 1px solid var(--accent);
-    border-radius: 20px;
+    font-size: 1.1rem;
+    padding: 1.2rem 1rem;
+    background-color: transparent;
     color: white;
 }
 
