--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@700&display=swap');
 
 :root {
     --bg: #272727;
@@ -22,6 +23,7 @@ body {
 
 .parent{
     display: flex;
+    height: 100vh;
     flex-direction: row;
 }
 
@@ -102,10 +104,92 @@ nav ul li a:hover{
     width: 100vw;
     align-items: center;
     order: 3;
+    overflow: auto;
 }
 
-.main h1{
-    padding-top: 10vh;
+.main .line{
+    background-color: var(--accent);
+    width: 25px;
+    height: 2px;
+}
+
+.main .latest{
+    position: relative;
+    top: 15vh;
+    left: -35vw;
+}
+
+.blog-wrapper{
+    display: flex;
+    position: relative;
+    left:0px;
+    width: 85vw;
+    top: 22vh;
+}
+
+.title{
+    font-size: 25px;
+    font-family: 'Nanum Myeongjo', serif;
+    color: var(--accent);
+    padding: 10px;
+}
+
+.left-div{
+    display: flex;
+    flex-direction: column;
+}
+
+.date{
+    text-align: right;
+    font-size: 28px;
+    padding: 10px;
+}
+
+.username-div{
+    display: flex;
+    justify-content: end;
+    padding: 5px;
+}
+
+.username{
+    writing-mode: vertical-lr;
+    transform: rotate(180deg);
+}
+
+.blog{
+    padding: 10px;
+    display: flex;
+    flex-direction: row;
+}
+
+.blog .discription{  
+    padding: 10px;
+    padding-bottom:0px;
+}
+
+.blog .readmore{  
+    color: var(--accent);
+    padding: 0px;
+}
+
+.blog button{
+    border: 2px solid var(--accent);
+    color: var(--accent);
+    padding: 10px 20px;
+    background-color: var(--bg);
+    border-radius: 100px;
+}
+
+.blog .tags{
+    padding-top: 10px;
+    padding-bottom: 2px;
+}
+
+.blog img{  
+    padding: 10px;
+    padding-top: 0px;
+    height: 20vh;
+    border-radius: 0 20px 20px 0px;
 }
 
 @media only screen and (max-width : 720px) {
@@ -117,6 +201,7 @@ nav ul li a:hover{
 .main{ 
     order: 1;
     height: 90vh;
+    overflow-x: hidden;
 }
 
 nav{
