--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@700&display=swap');
 
 :root {
     --bg: #272727;
@@ -25,103 +24,6 @@ body {
     height: 100vh;
 }
 
-/* Navbar */
-
-.navbar {
-    display: flex;
-    position: fixed;
-    height: 100vh;
-    z-index: 100;
-}
-
-nav {
-    display: flex;
-    position: relative;
-    align-items: center;
-    text-align: center;
-    overflow: none;
-    order: 1;
-    border-right: 1px solid var(--accent);
-    width: 7rem;
-}
-
-nav ul {
-    display: flex;
-    flex-direction: column;
-    list-style-type: none;
-    width: 100%;
-    padding: 0 0.5rem;
-}
-
-.icons {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-
-.top-icons {
-    justify-content: space-between;
-    height: 40vh;
-}
-
-.bottom-icons {
-    height: 35vh;
-    justify-content: center;
-}
-
-.nav-buttons {
-    aspect-ratio: 1/1;
-    width: 100%;
-}
-
-.nav-buttons i {
-    padding: 1rem;
-}
-
-.nav-buttons a {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    text-decoration: none;
-    color: var(--accent);
-    transition: all 0.4s linear;
-}
-
-.nav-buttons a:hover {
-    background-color: var(--accent);
-    border-radius: 100%;
-    color: var(--bg);
-}
-
-.nav-buttons p {
-    display: inline-block;
-    margin-top: 0.1rem;
-    font-size: 1rem;
-    color: aliceblue;
-    transition: all 0.4s linear;
-}
-
-.nav-buttons a:hover p {
-    color: var(--bg);
-}
-
-.selected {
-    background-color: var(--accent);
-    border-radius: 100%;
-}
-
-.selected i {
-    color: var(--bg);
-}
-
-.selected p {
-    color: var(--bg);
-}
-
-
 /* Blog page */
 
 .main {
@@ -145,6 +47,11 @@ nav ul {
 .page-info a {
     color: gray;
     text-decoration: none;
+    transition: all 0.3s ease-in-out;
+}
+
+.page-info a:hover {
+    color: var(--accent);
 }
 
 .tags {
