--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -99,3 +99,45 @@ nav ul {
     color: var(--bg);
 }
 
+@media only screen and (max-width : 720px) {
+
+    nav {
+        position: fixed;
+        z-index: 10;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, -20%);
+        background-color: var(--bg);
+        width: 95%;
+        order: 3;
+        border: 1px solid var(--accent);
+        border-radius: 2rem;
+    }
+
+    nav ul {
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+        padding: 0;
+    }
+
+    .nav-buttons {
+        padding: 0.5rem;
+        margin: auto 0.5rem;
+    }
+
+    .nav-buttons p {
+        display: none;
+    }
+
+    .icons {
+        height: 5rem;
+        width: auto;
+    }
+
+    .top-icons,
+    .bottom-icons {
+        flex-direction: row;
+    }
+
+}
