--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -39,25 +39,36 @@ body {
 }
 
 .page-title {
-    position: relative;
-    top: 15vh;
-    left: -35vw;
-}
-
-.page-title .line {
-    background-color: var(--accent);
-    width: 25px;
-    height: 2px;
-}
-
-
-.blog-wrapper {
     display: flex;
     position: relative;
     left: 0px;
     width: 85vw;
-    top: 22vh;
+    top: 15vh;
     margin-bottom: 2rem;
+}
+
+.page-title .line {
+    display: flex;
+    position: relative;
+    left: 24px;
+    background-color: var(--accent);
+    width: 25px;
+    height: 2px;
+}
+/* Blog */
+
+.blog-wrapper {
+    display: flex;
+    position: relative;
+    top: 7rem;
+    width: 95%;
+    margin-bottom: 2rem;
+    transition: all 0.3s ease-in-out;
+}
+
+.blog-wrapper:hover{
+    background-color: #585858;
+    border-radius: 2rem;
 }
 
 .title {
@@ -107,9 +118,13 @@ body {
     order: 2;
 }
 
-.blog .discription {
-    padding: 10px;
-    padding-bottom: 0px;
+.description {
+    height: 10rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-bottom: 1.1rem;
+    font-size: 1.3rem;
+    margin: 0;
 }
 
 .blog .readmore {
@@ -134,7 +149,7 @@ body {
 .blog img {
     padding: 10px;
     padding-top: 0px;
-    height: 20vh;
+    height: 10rem;
     border-radius: 0 20px 20px 0px;
 }
 
@@ -147,7 +162,6 @@ body {
     .main {
         order: 1;
         height: 100vh;
-        /* overflow-x: hidden; */
         padding: 0;
         padding-bottom: 15rem;
     }
@@ -155,7 +169,6 @@ body {
     /* Home */
 
     .page-title {
-        display: flex;
         flex-direction: column;
         align-items: center;
         top: 3vh;
@@ -163,9 +176,8 @@ body {
     }
 
     .page-title .line {
-        background-color: var(--accent);
+        left: 0;
         width: 50px;
-        height: 2px;
     }
 
     .blog {
@@ -176,6 +188,11 @@ body {
         flex-direction: column;
         top: 10vh;
     }
+    
+    .blog-wrapper:hover{
+        background-color: transparent;
+    }
+
 
     .left-div {
         flex-direction: row;
@@ -226,14 +243,6 @@ body {
     .blog .tags {
         padding-top: 5px;
         padding-bottom: 2px;
-    }
-
-    .blog button {
-        border: 2px solid var(--accent);
-        color: var(--accent);
-        padding: 5px 10px;
-        background-color: var(--bg);
-        border-radius: 100px;
     }
 
 }
