--- a/src/styles/create.css
+++ b/src/styles/create.css
@@ -35,7 +35,7 @@ body {
     width: 100vw;
     align-items: center;
     order: 3;
-    overflow: none;
+    overflow: auto;
 }
 
 .page-title {
@@ -43,7 +43,7 @@ body {
     position: relative;
     left: 0px;
     width: 85vw;
-    top: 10vh;
+    top: 15vh;
     margin-bottom: 2rem;
 }
 
@@ -56,9 +56,9 @@ body {
     height: 2px;
 }
 
-.details {
+.details{
     position: relative;
-    top: 10vh;
+    top: 15vh;
     width: 81.5vw;
     height: 50vh;
 }
@@ -68,112 +68,134 @@ form {
     width: 100%;
 }
 
-.input {
-    width: 95%;
-    box-shadow: inset 5px 5px 10px #1b1b1b,
-        inset -5px -5px 10px #333333;
-    border-radius: 1rem;
+.title_input {
+    position: relative;
+    border-radius: 16px;
+    background: #222222;
+    box-shadow: inset 8px 8px 17px #1c1c1c,inset -8px -8px 17px #282828;
+}
+
+.image_input {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    top: 50px;
+    align-items: center;
+    justify-content: center;
+    color: rgb(179, 179, 179);
+    height: 40vh;
+    border-radius: 16px;
+    background: linear-gradient(145deg, #242424, #1f1f1f);
+    box-shadow:  11px 11px 27px #1a1a1a, -11px -11px 27px #2a2a2a;
+}
+
+.image_input i{
+    position: relative;
+}
+
+.image_input h1{
+    color: rgb(199, 199, 199);;
+    padding-top: 20px;
+    position: relative;
+}
+
+.blog_input {
+    position: relative;
+    height: 50vh;
+    top: 120px;
+    border-radius: 16px;
+    background: #222222;
+    box-shadow: inset 8px 8px 17px #1c1c1c,inset -8px -8px 17px #282828;
 }
 
 input {
+    display: inline-block;
+    font-weight: 700;
     width: 90%;
-    height: 3.5rem;
     border: none;
-    background: transparent;
-    color: whitesmoke;
-    font-size: 2rem;
-    font-weight: 600;
-    padding: 0 1rem;
+    padding: 10px 0px 10px 20px;
+    font-size: 30px;
+    background-color: transparent;
+    color: white;
+}
+
+textarea {
+    display: inline-block;
+    font-weight: 700;
+    width: 100%;
+    height: 100%;
+    border: none;
+    padding: 10px 0px 10px 20px;
+    font-size: 30px;
+    background-color: transparent;
+    color: white;
+    overflow: scroll;
+}
+
+input::placeholder {
+    font-size: 30px;
+    font-weight: 700;
+    color: rgb(179, 179, 179);
+}
+
+textarea::placeholder {
+    font-size: 30px;
+    font-weight: 700;
+    color: rgb(179, 179, 179);
+}
+
+.input h2{
+    padding-bottom: 20px;
 }
 
 input:focus {
     outline: none;
 }
 
-.blog-img {
-    border-radius: 1rem;
-    background: #272727;
-    box-shadow: 5px 5px 10px #1a1a1a,
-        -5px -5px 10px #343434;
-    width: 95%;
-    height: 10rem;
-    margin: 2rem 0;
-}
-
-.center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100%;
-    color: gray;
-}
-
-.center p {
-    margin-top: 1rem;
-    font-weight: 600;
-}
-
-textarea {
-    resize: none;
-    border-radius: 1rem;
-    border: none;
-    background: #272727;
-    box-shadow: inset 5px 5px 10px #1a1a1a,
-        inset -5px -5px 10px #343434;
-    padding: 1rem;
-    color: white;
-    font-size: 1.5rem;
-    font-weight: 600;
-    font-family: 'Poppins', sans-serif;
-    height: 10rem;
-}
-
 textarea:focus {
     outline: none;
 }
 
+textarea::-webkit-scrollbar {
+    scrollbar-color: #999 #eee; /* Set color of the thumb and track */
+}
+
+textarea::-webkit-scrollbar-thumb {
+    background-color: #999; /* Set color of the thumb */
+}
+
+textarea::-webkit-scrollbar-track {
+    background-color: #eee; /* Set color of the track */
+}
+
 .btn {
+    position: relative;
+    top: 150px;
     display: inline-block;
     font-weight: 600;
-    font-size: 1rem;
-    width: 10rem;
-    padding: 1rem;
+    font-size: 1.5rem;
+    padding: 1rem 3rem;
     background-color: var(--accent);
     border: none;
-    color: var(--bg);
-    border-radius: 1rem;
+    color: bl;
+    border-radius: 1.5rem;
     transition: all 0.5s ease;
     cursor: pointer;
-    margin: 1rem 0.5rem;
+    margin-bottom: 200px;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
+.btn-dark{
+    background-color: var(--bg);
+    color: white;
+    box-shadow: inset 8px 8px 17px #1c1c1c,inset -8px -8px 17px #282828;
 }
 
 .btn:hover {
     border-radius: 1rem;
     transform: scale(1.05);
 }
-
-.neu-btn{
-    box-shadow: inset 5px 5px 10px #1b1b1b,
-            inset -5px -5px 10px #333333;
-    background-color: var(--bg);
-    color: white;
-    display: inline-block;
-    font-weight: 600;
-    font-size: 1rem;
-    width: 10rem;
-    padding: 1rem;
-    border: none;
-    border-radius: 1rem;
-    cursor: pointer;
-    margin: 1rem 0.5rem;
-    transition: all 1s ease;
-}
-
-.neu-btn:hover{
-    color: var(--accent);
-}
-
 @media only screen and (max-width : 720px) {
 
     .parent {
