--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -57,20 +57,41 @@ body {
     height: 2px;
 }
 
+.header{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.header h1{
+    display: inline;
+}
+
+.btn {
+    display: inline-block;
+    font-weight: 600;
+    font-size: 1rem;
+    width: 10rem;
+    padding: 1rem;
+    background-color: var(--accent);
+    border: none;
+    color: var(--bg);
+    border-radius: 1rem;
+    transition: all 0.5s ease;
+    cursor: pointer;
+    margin: 1rem 0.5rem;
+}
+
+.btn:hover {
+    border-radius: 1rem;
+    transform: scale(1.05);
+}
+
 .details {
     position: relative;
     top: 10vh;
     width: 81.5vw;
     height: 50vh;
-}
-
-.aboutme{
-    padding-bottom: 40px;
-}
-.aboutme h1{
-    color: var(--accent);
-    font-size: 40px;
-    padding-bottom: 15px;
 }
 
 .myblogs h1{
