--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -13,6 +13,7 @@
 
 body {
     background-color: var(--bg);
+    /* background-color: pink; */
     color: white;
     font-family: 'Poppins', sans-serif;
     height: 100vh;
@@ -55,12 +56,42 @@ body {
     width: 25px;
     height: 2px;
 }
+
+.header{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.header h1{
+    display: inline;
+}
+
+.btn {
+    display: inline-block;
+    font-weight: 600;
+    font-size: 1rem;
+    width: 10rem;
+    padding: 1rem;
+    background-color: var(--accent);
+    border: none;
+    color: var(--bg);
+    border-radius: 1rem;
+    transition: all 0.5s ease;
+    cursor: pointer;
+    margin: 0rem 0.5rem;
+}
+
+.btn:hover {
+    border-radius: 1rem;
+    transform: scale(1.05);
+}
 /* Blog */
 
 .blog-wrapper {
     display: flex;
     position: relative;
-    top: 7rem;
+    top: 10rem;
     width: 95%;
     margin-bottom: 2rem;
     transition: all 0.3s ease-in-out;
@@ -125,11 +156,6 @@ body {
     padding-bottom: 1.1rem;
     font-size: 1.3rem;
     margin: 0;
-}
-
-.blog .readmore {
-    color: var(--accent);
-    padding: 0px;
 }
 
 .tags a {
