--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -186,6 +186,15 @@ input:focus {
     border-radius: 0 20px 20px 0px;
 }
 
+.username-tag {
+    color: white;
+    text-decoration: none;
+}
+
+.username-tag:hover {
+    color: var(--accent);
+}
+
 
 @media only screen and (max-width : 720px) {
 
@@ -232,7 +241,7 @@ input:focus {
         top: 10vh;
     }
 
-    .blog-wrapper:hover{
+    .blog-wrapper:hover {
         background-color: transparent;
     }
 
