--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -13,7 +13,6 @@
 
 body {
     background-color: var(--bg);
-    /* background-color: pink; */
     color: white;
     font-family: 'Poppins', sans-serif;
     height: 100vh;
@@ -57,47 +56,18 @@ body {
     height: 2px;
 }
 
-.header{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-.header h1{
-    display: inline;
-}
-
-.btn {
-    display: inline-block;
-    font-weight: 600;
-    font-size: 1rem;
-    width: 10rem;
-    padding: 1rem;
-    background-color: var(--accent);
-    border: none;
-    color: var(--bg);
-    border-radius: 1rem;
-    transition: all 0.5s ease;
-    cursor: pointer;
-    margin: 0rem 0.5rem;
-}
-
-.btn:hover {
-    border-radius: 1rem;
-    transform: scale(1.05);
-}
 /* Blog */
 
 .blog-wrapper {
     display: flex;
     position: relative;
-    top: 10rem;
+    top: 7rem;
     width: 95%;
     margin-bottom: 2rem;
     transition: all 0.3s ease-in-out;
 }
 
-.blog-wrapper:hover{
+.blog-wrapper:hover {
     background-color: #585858;
     border-radius: 2rem;
 }
@@ -135,19 +105,6 @@ body {
     transform: rotate(180deg);
 }
 
-.username-tag{
-    color: white;
-    text-decoration: none;
-}
-
-.username-tag:hover{
-    color: var(--accent);
-}
-
-.readmore {
-    color: var(--accent);
-}
-
 .blog {
     padding: 10px;
     display: flex;
@@ -169,6 +126,21 @@ body {
     padding-bottom: 1.1rem;
     font-size: 1.3rem;
     margin: 0;
+}
+
+.blog .readmore {
+    color: var(--accent);
+    padding: 0px;
+}
+
+.username-tag{
+    color : white;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.username-tag:hover{
+    color : var(--accent);
 }
 
 .tags a {
@@ -227,8 +199,8 @@ body {
         flex-direction: column;
         top: 10vh;
     }
-    
-    .blog-wrapper:hover{
+
+    .blog-wrapper:hover {
         background-color: transparent;
     }
 
