--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -21,7 +21,7 @@ body {
 
 .parent {
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 /* Blog page */
@@ -95,6 +95,10 @@ body {
 
 .content p::first-letter {
     font-size: 4rem;
+}
+
+.content p {
+    white-space: pre-wrap;
 }
 
 @media only screen and (max-width : 720px) {
