--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -88,7 +88,7 @@ body {
 
 .blog-img img {
     width: 100%;
-    height: 20rem;
+    height: auto;
     object-fit: cover;
     border-radius: 1rem;
 }
