--- a/src/styles/create.css
+++ b/src/styles/create.css
@@ -97,16 +97,16 @@ input:focus {
         inset -5px -5px 10px #333333;
     border-radius: 1rem;
     font-size: 1.5rem;
-    padding:1.5rem 1rem;
+    padding: 1.5rem 1rem;
     height: 2.5rem;
 }
 
 .tag-container {
     display: flex;
     flex-flow: row wrap;
-  }
-  
-  .tag{
+}
+
+.tag {
     border: 2px solid var(--accent);
     color: var(--accent);
     padding: 0.5rem 1rem;
@@ -114,20 +114,20 @@ input:focus {
     border-radius: 2rem;
     text-decoration: none;
     margin: 0.5rem;
-  }
-  
-  .tag::after {
+}
+
+.tag::after {
     pointer-events: all;
     display: inline-block;
-    content: 'x';  
+    content: 'x';
     height: 20px;
     width: 20px;
     margin-left: 6px;
     text-align: center;
     color: #ccc;
     cursor: pointer;
-  }
-  
+}
+
 
 .blog-img {
     border-radius: 1rem;
@@ -157,7 +157,7 @@ input:focus {
 }
 
 textarea {
-    resize: none;
+    resize: vertical;
     border-radius: 1rem;
     border: none;
     background: #272727;
@@ -168,7 +168,8 @@ textarea {
     font-size: 1.5rem;
     font-weight: 600;
     font-family: 'Poppins', sans-serif;
-    height: 10rem;
+    min-height: 10rem;
+    height: auto;
 }
 
 textarea:focus {
@@ -224,7 +225,7 @@ textarea:focus {
 
     .main {
         order: 1;
-        height: 100vh;
+        min-height: 100vh;
         padding: 0;
         padding-bottom: 30rem;
     }
